# origin-trial-token

./: Cargo.toml
src/: Cargo.toml  lib.rs  tests.rs
tools/: Cargo.toml  README.md  dump.rs  mktoken.rs  utils.rs  verify.rs
tools/test-keys/: test  test-ecdsa  test-ecdsa.pkcs8  test.pub
