[package]
name = "tools"
version = "0.1.0"
edition = "2021"
authors = [
  "Emilio Cobos Álvarez <emilio@crisal.io>",
]
license = "MPL-2.0"

[dependencies]
origin-trial-token = { path = "../src" }
clap = { version = "4.6.0", features = ["derive"] }
chrono = "0.4"
base64 = "0.22"
ring = "0.17"
pem = "3.0"
asn1 = "0.24"

[[bin]]
name = "mktoken"
path = "mktoken.rs"

[[bin]]
name = "verify"
path = "verify.rs"

[[bin]]
name = "dump"
path = "dump.rs"

